--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.4.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.7.2",
+    "socketio": "^1.0.0"
   }
 }
