--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "path": "^0.12.7",
     "socket.io": "^4.7.2",
     "socketio": "^1.0.0"
